# abjad-programming-langauge-test-

./: .gitignore  AGENT.md
.agents/skills/: antigravity.md  git-workflow.md  opencode.md  rust-best-practices.md  windsurf.md
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  borrow_checker.rs  build_system.rs  cli.rs  codegen.rs  codegen_optimizer.rs  debugger.rs  doc_generator.rs  error.rs  formatter.rs  heap_allocation.rs  lexer.rs  lib.rs  linker.rs  linter.rs  main.rs  memory_layout.rs  memory_optimizer.rs  memory_safety.rs  object_file.rs  optimizer.rs  package_manager.rs  parser.rs  profiler.rs  runtime_optimizer.rs  stack_allocation.rs  token.rs  type_checker.rs
refrences/: abjad-prd.html  phase0-memory-management.md  phase1-standard-library.md  phase2-ecosystem.md  phase3-advanced-tools.md  phase4-optimizations.md  phases-roadmap.md
std/collections/: mod.rs
std/core/: mod.rs  types.rs
std/io/: mod.rs
std/strings/: mod.rs
